<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9D9D9D"
    >

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/ques1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ques1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques1_1" />

            <RadioButton
                android:id="@+id/ques1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques1_2" />

            <RadioButton
                android:id="@+id/ques1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques1_3" />
        </RadioGroup>
        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/ques2"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ques2_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:id="@+id/ques3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques3"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ques3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques3_1" />

            <RadioButton
                android:id="@+id/ques3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques3_2" />

            <RadioButton
                android:id="@+id/ques3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques3_3" />
        </RadioGroup>
        <TextView
            android:id="@+id/ques4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/ques4"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/ques4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4_1" />

        <CheckBox
            android:id="@+id/ques4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4_2" />

        <CheckBox
            android:id="@+id/ques4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4_3" />
        <CheckBox
            android:id="@+id/ques4_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4_4" />

        <TextView
            android:id="@+id/ques5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques5"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ques5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques5_1" />

            <RadioButton
                android:id="@+id/ques5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques5_2" />

            <RadioButton
                android:id="@+id/ques5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ques5_3" />
        </RadioGroup>




        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers" />

    </LinearLayout>
</ScrollView>